--- a/Web/First/login.html
+++ b/Web/First/login.html
@@ -30,7 +30,7 @@
         </div>
         <!-- 输入框盒子 -->
         <div class="input-box">
-            <input type="text" placeholder="用户名">
+            <input type="text" placeholder="手机号">
             <input type="password" placeholder="密码">
             <input type="password" placeholder="确认密码">
         </div>
@@ -49,7 +49,7 @@
         </div>
         <!-- 输入框盒子 -->
         <div class="input-box">
-            <input type="text" placeholder="用户名">
+            <input type="text" placeholder="手机号">
             <input type="password" placeholder="密码">
         </div>
         <!-- 按钮盒子 -->
